--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "Miljan \"MP\" Pantovic",
 	"license": "MIT",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
