--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-mongo-sanitize": "^2.2.0",
 		"express-rate-limit": "^7.1.5",
+		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.7",
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.0.1",
+		"xss-clean": "^0.1.4"
 	}
 }
