--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.7",
 		"nodemon": "^3.0.1",
+		"pdf-lib": "^1.17.1",
 		"xss-clean": "^0.1.4"
 	}
 }
